# divisibility-regex

./: LICENSE  divisibility-regex.cabal  hie.yaml
exe/: Main.hs
