cabal-version:      3.0
name:               divisibility-regex
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Jason Chen
maintainer:         chezbgone@gmail.com
-- copyright:
category:           Math
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable divisibility-regex
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0
                    , containers
    hs-source-dirs:   exe
    default-language: GHC2021
